# PyLAD

./: MANIFEST.in  README.md  pyproject.toml
pylad/: __init__.py  api.py  config.py  constants.py  instrument.py
pylad/cli/: main.py
pylad/instrument/: __init__.py  detector.py  frame_buffer.py  instrument.py
pylad/resources/: xisl_errors.json
pylad/utils/: load_xisl.py  wrap_ctypes.py  xisl_errors.py  xisl_paths.py
pyxisl/: api.py  instrument.py
pyxisl/utils/: load_xisl.py  wrap_ctypes.py  xisl_errors.py  xisl_paths.py
scripts/: generate_xisl_errors.py  run_ctypes_gen.py
scripts/MEC/: REAMDE.md  pylad_client.py  run_pylad_client.bat  varex_relay_server.py
scripts/generate_ctypes_wrappers/: generate_ctypes_wrappers.py  requirements.txt
tests/: test_api.py  test_frame_buffer.py
