[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'PyLAD'
requires-python = '>=3.10'
dynamic = ['version']
dependencies = [
    'numpy',
    'pillow',
]
readme = 'REAMDE.md'

[project.scripts]
pylad = 'pylad.cli.main:main'

[tool.black]
line-length = 79
skip-string-normalization = true
